--- a/.github/workflows/native-cron-build.yml
+++ b/.github/workflows/native-cron-build.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: gwenneg/quarkus
-          ref: issue-7269-support-graalvm-20.0
+          ref: issue-7269-support-graalvm-19.3.1-and-20.0.0-with-19.3.1-sdk
 
       - uses: actions/cache@v1
         with:
