Filter WIP and Drafts

--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -17,6 +17,7 @@ on:
       - '.github/NativeBuildReport.kts'
       - '.dependabot/**'
   pull_request:
+    types: [assigned, opened, synchronize, reopened, ready_for_review, edited]
     paths-ignore:
       - 'docs/src/main/asciidoc/**'
       - 'README.md'
@@ -42,6 +43,18 @@ jobs:
   build-jdk8:
     name: "JDK 8 Build"
     runs-on: ubuntu-latest
+    # Skip draft PRs and those with WIP in the subject, rerun as soon as its removed
+    if: "github.event_name != 'pull_request' || ( \
+           github.event.pull_request.draft == false && \
+           github.event.pull_request.state != 'closed' && \
+           contains(github.event.pull_request.title, 'wip ') == false && \
+           contains(github.event.pull_request.title, '[wip]') == false && \
+           (
+             github.event.action != 'edited' || \
+             contains(github.event.changes.title.from, 'wip ') || \
+             contains(github.event.changes.title.from, '[wip]') \
+           ) \
+         )"
     steps:
       - uses: actions/checkout@v2
       - uses: n1hility/cancel-previous-runs@v2
