refactor: Kubernetes extension now uses `quarkus.`

--- a/integration-tests/kubernetes/standard/src/test/resources/kubernetes-with-quarkus-app-name.properties
+++ b/integration-tests/kubernetes/standard/src/test/resources/kubernetes-with-quarkus-app-name.properties
@@ -1,11 +1,11 @@
 quarkus.application.name=test
-kubernetes.deployment.target=kubernetes,openshift
-kubernetes.name=foo
-kubernetes.group=bar
-kubernetes.version=1.0-kube
+quarkus.kubernetes.deployment-target=kubernetes,openshift
+quarkus.kubernetes.name=foo
+quarkus.kubernetes.group=bar
+quarkus.kubernetes.version=1.0-kube
 
-openshift.name=ofoo
-openshift.group=obar
-openshift.version=1.0-openshift
+quarkus.openshift.name=ofoo
+quarkus.openshift.group=obar
+quarkus.openshift.version=1.0-openshift
 
-s2i.name=s2ifoo
+quarkus.s2i.name=s2ifoo
