--- a/integration-tests/kubernetes/invoker/src/it/openshift-s2i-build-and-deploy/src/main/resources/application.properties
+++ b/integration-tests/kubernetes/invoker/src/it/openshift-s2i-build-and-deploy/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 # Configuration file
 # key = value
-kubernetes.deployment.target=openshift
+quarkus.kubernetes.deployment-target=openshift
 quarkus.kubernetes-client.trust-certs=true
