--- a/integration-tests/kubernetes/standard/src/test/resources/kubernetes-with-application.properties
+++ b/integration-tests/kubernetes/standard/src/test/resources/kubernetes-with-application.properties
@@ -1,8 +1,6 @@
 quarkus.http.port=9090
-kubernetes.name=test-it
-kubernetes.labels[0].key=foo
-kubernetes.labels[0].value=bar
-kubernetes.env-vars[0].name=MY_ENV_VAR
-kubernetes.env-vars[0].value=SOMEVALUE
-kubernetes.group=grp
-docker.registry=quay.io
+quarkus.kubernetes.name=test-it
+quarkus.kubernetes.labels.foo=bar
+quarkus.kubernetes.env-vars.my-env-var.value=SOMEVALUE
+quarkus.container-image.group=grp
+quarkus.container-image.registry=quay.io
