--- a/integration-tests/kubernetes/standard/src/test/resources/openshift-with-application.properties
+++ b/integration-tests/kubernetes/standard/src/test/resources/openshift-with-application.properties
@@ -1,9 +1,7 @@
 quarkus.http.port=9090
-kubernetes.deployment.target=openshift
-openshift.name=test-it
-openshift.labels[0].key=foo
-openshift.labels[0].value=bar
-openshift.env-vars[0].name=MY_ENV_VAR
-openshift.env-vars[0].value=SOMEVALUE
-openshift.group=grp
-s2i.registry=quay.io
+quarkus.kubernetes.deployment-target=openshift
+quarkus.openshift.name=test-it
+quarkus.openshift.labels.foo=bar
+quarkus.openshift.env-vars.my-env-var.value=SOMEVALUE
+quarkus.openshift.group=grp
+quarkus.s2i.registry=quay.io
