--- a/integration-tests/container-image/src/it/container-build-jib/invoker.properties
+++ b/integration-tests/container-image/src/it/container-build-jib/invoker.properties
@@ -1,1 +1,1 @@
-invoker.goals=clean package -Dquarkus.container-image.execution=build
+invoker.goals=clean package -Dquarkus.container-image.build=true
