Set fail-fast to false for the native builds

--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -295,7 +295,7 @@ jobs:
     timeout-minutes: ${{matrix.timeout}}
     strategy:
       max-parallel: 8
-      fail-fast: true
+      fail-fast: false
       matrix:
         category: [Main, Data1, Data2, Data3, Data4, Data5, Security1, Security2, Amazon, Messaging, Cache, HTTP, Misc1, Misc2, Misc3, Spring]
         include:
