--- a/integration-tests/hibernate-search-elasticsearch/src/main/resources/application.properties
+++ b/integration-tests/hibernate-search-elasticsearch/src/main/resources/application.properties
@@ -11,4 +11,5 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-search.elasticsearch.version=7
 quarkus.hibernate-search.elasticsearch.analysis.configurer=io.quarkus.it.hibernate.search.elasticsearch.search.DefaultITAnalysisConfigurer
 quarkus.hibernate-search.elasticsearch.index-defaults.lifecycle.strategy=drop-and-create-and-drop
+quarkus.hibernate-search.elasticsearch.index-defaults.lifecycle.required-status=yellow
 quarkus.hibernate-search.automatic-indexing.synchronization.strategy=sync
