--- a/extensions/agroal/deployment/src/test/resources/base.properties
+++ b/extensions/agroal/deployment/src/test/resources/base.properties
@@ -1,3 +1,4 @@
-quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:testing
-quarkus.datasource.driver=org.h2.Driver
-quarkus.datasource.username=username-named
+quarkus.datasource.testing.kind=h2
+quarkus.datasource.testing.username=username-named
+quarkus.datasource.testing.jdbc.url=jdbc:h2:tcp://localhost/mem:testing
+quarkus.datasource.testing.jdbc.driver=org.h2.Driver
