--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -621,6 +621,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-reactive-datasource</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-reactive-pg-client</artifactId>
                 <version>${project.version}</version>
             </dependency>
