--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -345,6 +345,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-datasource-common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-datasource</artifactId>
                 <version>${project.version}</version>
             </dependency>
