Prevent redirect loops and support a cookie path parameter

--- a/integration-tests/oidc-code-flow/src/main/resources/application.properties
+++ b/integration-tests/oidc-code-flow/src/main/resources/application.properties
@@ -18,6 +18,25 @@ quarkus.oidc.tenant-1.authentication.redirect-path=/web-app/callback-after-redir
 quarkus.oidc.tenant-1.authentication.restore-path-after-redirect=false
 quarkus.oidc.tenant-1.application-type=web-app
 
+# Tenant which does not need to restore a request path after redirect with a different redirect path root
+quarkus.oidc.tenant-2.auth-server-url=${keycloak.url}/realms/quarkus
+quarkus.oidc.tenant-2.client-id=quarkus-app
+quarkus.oidc.tenant-2.credentials.secret=secret
+quarkus.oidc.tenant-2.token.issuer=${keycloak.url}/realms/quarkus
+quarkus.oidc.tenant-2.authentication.redirect-path=/web-app2
+quarkus.oidc.tenant-2.authentication.restore-path-after-redirect=false
+quarkus.oidc.tenant-2.authentication.cookie-path=/
+quarkus.oidc.tenant-2.application-type=web-app
+
+# Tenant which is only used to test that the failed token request will not cause a redirect loop.
+quarkus.oidc.tenant-3.auth-server-url=${keycloak.url}/realms/quarkus
+quarkus.oidc.tenant-3.client-id=quarkus-app
+quarkus.oidc.tenant-3.credentials.secret=secret
+quarkus.oidc.tenant-3.token.issuer=${keycloak.url}/realms/quarkus
+quarkus.oidc.tenant-3.authentication.redirect-path=/some/other/path
+quarkus.oidc.tenant-3.authentication.restore-path-after-redirect=false
+quarkus.oidc.tenant-3.application-type=web-app
+
 quarkus.http.auth.permission.roles1.paths=/index.html
 quarkus.http.auth.permission.roles1.policy=authenticated
 
