feat: add an openshift wrapper extension

--- a/extensions/kubernetes/openshift/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/kubernetes/openshift/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -3,7 +3,7 @@ name: "Kubernetes"
 metadata:
   keywords:
   - "kubernetes"
-  guide: "https://quarkus.io/guides/kubernetes"
+  guide: "https://quarkus.io/guides/openshift"
   categories:
   - "cloud"
   status: "stable"
