--- a/integration-tests/kubernetes/invoker/src/it/openshift-s2i-build-and-deploy/pom.xml
+++ b/integration-tests/kubernetes/invoker/src/it/openshift-s2i-build-and-deploy/pom.xml
@@ -30,11 +30,7 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-kubernetes</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-container-image-s2i</artifactId>
+      <artifactId>quarkus-openshift</artifactId>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
