--- a/bom/deployment/pom.xml
+++ b/bom/deployment/pom.xml
@@ -503,6 +503,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-openshift-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-kubernetes-spi</artifactId>
                 <version>${project.version}</version>
             </dependency>
