--- a/extensions/kubernetes/openshift/deployment/pom.xml
+++ b/extensions/kubernetes/openshift/deployment/pom.xml
@@ -3,61 +3,27 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>quarkus-kubernetes-parent</artifactId>
         <groupId>io.quarkus</groupId>
+        <artifactId>quarkus-openshift-parent</artifactId>
         <version>999-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>quarkus-kubernetes-deployment</artifactId>
-    <name>Quarkus - Kubernetes - Deployment</name>
+    <artifactId>quarkus-openshift-deployment</artifactId>
+    <name>Quarkus - Kubernetes - Openshift - Deployment</name>
 
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-container-image-deployment</artifactId>
+            <artifactId>quarkus-container-image-s2i-deployment</artifactId>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-kubernetes-spi</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-kubernetes-client-deployment-internal</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.dekorate</groupId>
-            <artifactId>kubernetes-annotations</artifactId>
-            <classifier>noapt</classifier>
-            <exclusions>
-                <exclusion>
-                    <groupId>io.sundr</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.sun</groupId>
-                    <artifactId>tools</artifactId>
-                </exclusion>
-            </exclusions>
+            <artifactId>quarkus-kubernetes-deployment</artifactId>
         </dependency>
         <dependency>
             <groupId>io.dekorate</groupId>
             <artifactId>openshift-annotations</artifactId>
-            <classifier>noapt</classifier>
-            <exclusions>
-                <exclusion>
-                    <groupId>io.sundr</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.sun</groupId>
-                    <artifactId>tools</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>io.dekorate</groupId>
-            <artifactId>knative-annotations</artifactId>
             <classifier>noapt</classifier>
             <exclusions>
                 <exclusion>
