--- a/extensions/kubernetes/openshift/runtime/pom.xml
+++ b/extensions/kubernetes/openshift/runtime/pom.xml
@@ -6,13 +6,13 @@
 
     <parent>
         <groupId>io.quarkus</groupId>
-        <artifactId>quarkus-kubernetes-parent</artifactId>
+        <artifactId>quarkus-openshift-parent</artifactId>
         <version>999-SNAPSHOT</version>
     </parent>
 
-    <artifactId>quarkus-kubernetes</artifactId>
-    <name>Quarkus - Kubernetes - Runtime</name>
-    <description>Generate Kubernetes resources from annotations</description>
+    <artifactId>quarkus-openshift</artifactId>
+    <name>Quarkus - Kubernetes - Openshift - Runtime</name>
+    <description>Generate Openshift resources from annotations</description>
 
     <dependencies>
         <!-- We need the config to be on the runtime classpath because it's referenced from the config generation -->
@@ -42,6 +42,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
