Upgrade Maven resolver related dependencies used by bootstrap to those used by/compatible with Maven 3.6.3 release

--- a/devtools/maven/pom.xml
+++ b/devtools/maven/pom.xml
@@ -42,6 +42,10 @@
                     <groupId>javax.enterprise</groupId>
                     <artifactId>cdi-api</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.codehaus.plexus</groupId>
+                    <artifactId>plexus-classworlds</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
