--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -67,13 +67,13 @@
         <asm.version>7.3.1</asm.version>
         <commons-io.version>2.6</commons-io.version>
         <jboss-metadata-web.version>11.0.0.Final</jboss-metadata-web.version>
-        <maven-core.version>3.5.4</maven-core.version>
-        <maven-resolver.version>1.1.1</maven-resolver.version>
-        <maven-toolchain.version>3.0-alpha-2</maven-toolchain.version>
+        <maven-core.version>3.6.3</maven-core.version>
+        <maven-resolver.version>1.4.1</maven-resolver.version>
+        <maven-toolchain.version>3.0.0</maven-toolchain.version>
         <guava.version>27.0.1-jre</guava.version>
-        <plexus-utils.version>3.0.24</plexus-utils.version>
-        <maven-plugin-annotations.version>3.5.2</maven-plugin-annotations.version>
-        <plexus-component-annotations.version>1.7.1</plexus-component-annotations.version>
+        <plexus-utils.version>3.2.1</plexus-utils.version>
+        <maven-plugin-annotations.version>3.6.0</maven-plugin-annotations.version>
+        <plexus-component-annotations.version>2.1.0</plexus-component-annotations.version>
         <!-- What we actually depend on for the annotations, as latest Graal is not available in Maven fast enough: -->
         <graal-sdk.version>19.3.1</graal-sdk.version>
         <gizmo.version>1.0.2.Final</gizmo.version>
