--- a/extensions/flyway/deployment/src/test/resources/config-for-missing-named-datasource.properties
+++ b/extensions/flyway/deployment/src/test/resources/config-for-missing-named-datasource.properties
@@ -1,5 +1,5 @@
 # Datasource for "inventory"
-quarkus.datasource.inventory.kind=h2
+quarkus.datasource.inventory.db-kind=h2
 quarkus.datasource.inventory.username=username2
 quarkus.datasource.inventory.jdbc.url=jdbc:h2:tcp://localhost/mem:inventory
 quarkus.datasource.inventory.jdbc.min-size=2
