--- a/integration-tests/jpa-mariadb/src/main/resources/application.properties
+++ b/integration-tests/jpa-mariadb/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.datasource.kind=mariadb
+quarkus.datasource.db-kind=mariadb
 quarkus.datasource.username=hibernate_orm_test
 quarkus.datasource.password=hibernate_orm_test
 quarkus.datasource.jdbc.url=${mariadb.url}
