--- a/integration-tests/jpa-mssql/src/main/resources/application.properties
+++ b/integration-tests/jpa-mssql/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.datasource.kind=mssql
+quarkus.datasource.db-kind=mssql
 quarkus.datasource.username=sa
 quarkus.datasource.password=${mssqldb.sa-password}
 quarkus.datasource.jdbc.url=${mssqldb.url}
