--- a/integration-tests/main/src/main/resources/application.properties
+++ b/integration-tests/main/src/main/resources/application.properties
@@ -19,7 +19,7 @@ quarkus.ssl.native=false
 quarkus.application.name=main-integration-test
 quarkus.application.version=1.0
 
-quarkus.datasource.kind=${datasource.kind}
+quarkus.datasource.db-kind=${datasource.db-kind}
 quarkus.datasource.username=${datasource.username}
 quarkus.datasource.password=${datasource.password}
 quarkus.datasource.jdbc.url=${datasource.url}
