--- a/integration-tests/vault-agroal/src/test/resources/application-vault-datasource.properties
+++ b/integration-tests/vault-agroal/src/test/resources/application-vault-datasource.properties
@@ -10,13 +10,13 @@ quarkus.vault.credentials-provider.static-ds.kv-path=config
 quarkus.vault.credentials-provider.dynamic-ds.database-credentials-role=mydbrole
 
 # static through named credentials provider
-quarkus.datasource.staticDS.kind=postgresql
+quarkus.datasource.staticDS.db-kind=postgresql
 quarkus.datasource.staticDS.username=postgres
 quarkus.datasource.staticDS.credentials-provider=static-ds
 quarkus.datasource.staticDS.jdbc.url=jdbc:postgresql://localhost:6543/mydb
 
 # dynamic through named credentials provider
-quarkus.datasource.dynamicDS.kind=postgresql
+quarkus.datasource.dynamicDS.db-kind=postgresql
 quarkus.datasource.dynamicDS.username=postgres
 quarkus.datasource.dynamicDS.credentials-provider=dynamic-ds
 quarkus.datasource.dynamicDS.credentials-provider-type=vault-credentials-provider
