--- a/extensions/agroal/deployment/src/test/resources/application-default-datasource-unknown-driver.properties
+++ b/extensions/agroal/deployment/src/test/resources/application-default-datasource-unknown-driver.properties
@@ -1,4 +1,4 @@
-quarkus.datasource.kind=other
+quarkus.datasource.db-kind=other
 quarkus.datasource.username=username-default
 
 quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:default
