--- a/extensions/agroal/deployment/src/test/resources/application-default-datasource.properties
+++ b/extensions/agroal/deployment/src/test/resources/application-default-datasource.properties
@@ -1,5 +1,5 @@
 #tag::basic[]
-quarkus.datasource.kind=h2
+quarkus.datasource.db-kind=h2
 quarkus.datasource.username=username-default
 
 quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:default
