--- a/extensions/agroal/deployment/src/test/resources/application-multiple-datasources.properties
+++ b/extensions/agroal/deployment/src/test/resources/application-multiple-datasources.properties
@@ -1,17 +1,17 @@
-quarkus.datasource.kind=h2
+quarkus.datasource.db-kind=h2
 quarkus.datasource.username=username-default
 quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:default
 quarkus.datasource.jdbc.min-size=3
 quarkus.datasource.jdbc.max-size=13
 
-quarkus.datasource.users.kind=h2
+quarkus.datasource.users.db-kind=h2
 quarkus.datasource.users.username=username1
 quarkus.datasource.users.jdbc.driver=org.h2.Driver
 quarkus.datasource.users.jdbc.url=jdbc:h2:tcp://localhost/mem:users
 quarkus.datasource.users.jdbc.min-size=1
 quarkus.datasource.users.jdbc.max-size=11
 
-quarkus.datasource.inventory.kind=h2
+quarkus.datasource.inventory.db-kind=h2
 quarkus.datasource.inventory.username=username2
 quarkus.datasource.inventory.jdbc.driver=org.h2.Driver
 quarkus.datasource.inventory.jdbc.url=jdbc:h2:tcp://localhost/mem:inventory
