--- a/extensions/agroal/deployment/src/test/resources/base.properties
+++ b/extensions/agroal/deployment/src/test/resources/base.properties
@@ -1,3 +1,3 @@
-quarkus.datasource.kind=h2
+quarkus.datasource.db-kind=h2
 quarkus.datasource.username=username-named
 quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:testing
