--- a/extensions/elytron-security-jdbc/deployment/src/test/resources/minimal-config/application.properties
+++ b/extensions/elytron-security-jdbc/deployment/src/test/resources/minimal-config/application.properties
@@ -1,4 +1,4 @@
-quarkus.datasource.kind=h2
+quarkus.datasource.db-kind=h2
 quarkus.datasource.username=sa
 quarkus.datasource.password=sa
 quarkus.datasource.jdbc.url=jdbc:h2:mem:minimal-config;DB_CLOSE_DELAY=-1;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:minimal-config/import.sql'
