--- a/extensions/elytron-security-jdbc/deployment/src/test/resources/multiple-data-sources/application.properties
+++ b/extensions/elytron-security-jdbc/deployment/src/test/resources/multiple-data-sources/application.properties
@@ -1,9 +1,9 @@
-quarkus.datasource.kind=h2
+quarkus.datasource.db-kind=h2
 quarkus.datasource.username=sa
 quarkus.datasource.password=sa
 quarkus.datasource.jdbc.url=jdbc:h2:mem:multiple-data-sources-users;DB_CLOSE_DELAY=-1;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:multiple-data-sources/users.sql'
 
-quarkus.datasource.permissions.kind=h2
+quarkus.datasource.permissions.db-kind=h2
 quarkus.datasource.permissions.username=sa
 quarkus.datasource.permissions.password=sa
 quarkus.datasource.permissions.jdbc.url=jdbc:h2:mem:multiple-data-sources-permissions;DB_CLOSE_DELAY=-1;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:multiple-data-sources/permissions.sql'
