--- a/extensions/flyway/deployment/src/test/resources/clean-at-start-config.properties
+++ b/extensions/flyway/deployment/src/test/resources/clean-at-start-config.properties
@@ -1,4 +1,4 @@
-quarkus.datasource.kind=h2
+quarkus.datasource.db-kind=h2
 quarkus.datasource.username=sa
 quarkus.datasource.password=sa
 quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:test-quarkus-clean-at-start;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'src/test/resources/h2-init-data.sql'
