--- a/extensions/flyway/deployment/src/test/resources/config-for-multiple-datasources-without-default.properties
+++ b/extensions/flyway/deployment/src/test/resources/config-for-multiple-datasources-without-default.properties
@@ -1,12 +1,12 @@
 # Datasource for "users"
-quarkus.datasource.users.kind=h2
+quarkus.datasource.users.db-kind=h2
 quarkus.datasource.users.username=username1
 quarkus.datasource.users.jdbc.url=jdbc:h2:tcp://localhost/mem:users
 quarkus.datasource.users.jdbc.min-size=1
 quarkus.datasource.users.jdbc.max-size=11
 
 # Datasource for "inventory"
-quarkus.datasource.inventory.kind=h2
+quarkus.datasource.inventory.db-kind=h2
 quarkus.datasource.inventory.username=username2
 quarkus.datasource.inventory.jdbc.driver=org.h2.jdbcx.JdbcDataSource
 quarkus.datasource.inventory.jdbc.url=jdbc:h2:tcp://localhost/mem:inventory
