--- a/extensions/flyway/deployment/src/test/resources/config-for-multiple-datasources.properties
+++ b/extensions/flyway/deployment/src/test/resources/config-for-multiple-datasources.properties
@@ -1,11 +1,11 @@
 # Datasource default
-quarkus.datasource.kind=h2
+quarkus.datasource.db-kind=h2
 quarkus.datasource.username=sa
 quarkus.datasource.password=sa
 quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:test_quarkus;DB_CLOSE_DELAY=-1
 
 # Datasource for "users"
-quarkus.datasource.users.kind=h2
+quarkus.datasource.users.db-kind=h2
 quarkus.datasource.users.username=username1
 quarkus.datasource.users.jdbc.driver=org.h2.Driver
 quarkus.datasource.users.jdbc.url=jdbc:h2:tcp://localhost/mem:users
@@ -14,7 +14,7 @@ quarkus.datasource.users.jdbc.max-size=11
 quarkus.datasource.users.jdbc.xa=false
 
 # Datasource for "inventory"
-quarkus.datasource.inventory.kind=h2
+quarkus.datasource.inventory.db-kind=h2
 quarkus.datasource.inventory.username=username2
 quarkus.datasource.inventory.jdbc.driver=org.h2.jdbcx.JdbcDataSource
 quarkus.datasource.inventory.jdbc.url=jdbc:h2:tcp://localhost/mem:inventory
