--- a/extensions/flyway/deployment/src/test/resources/config-for-named-datasource-without-default.properties
+++ b/extensions/flyway/deployment/src/test/resources/config-for-named-datasource-without-default.properties
@@ -1,5 +1,5 @@
 # Datasource for "users"
-quarkus.datasource.users.kind=h2
+quarkus.datasource.users.db-kind=h2
 quarkus.datasource.users.username=username1
 quarkus.datasource.users.jdbc.url=jdbc:h2:tcp://localhost/mem:users
 quarkus.datasource.users.jdbc.min-size=1
