--- a/extensions/flyway/deployment/src/test/resources/migrate-at-start-config-named-datasource.properties
+++ b/extensions/flyway/deployment/src/test/resources/migrate-at-start-config-named-datasource.properties
@@ -1,4 +1,4 @@
-quarkus.datasource.users.kind=h2
+quarkus.datasource.users.db-kind=h2
 quarkus.datasource.users.username=sa
 quarkus.datasource.users.password=sa
 quarkus.datasource.users.jdbc.url=jdbc:h2:tcp://localhost/mem:test-quarkus-migrate-at-start-users;DB_CLOSE_DELAY=-1
