--- a/extensions/security-jpa/deployment/src/test/resources/minimal-config/application.properties
+++ b/extensions/security-jpa/deployment/src/test/resources/minimal-config/application.properties
@@ -1,4 +1,4 @@
-quarkus.datasource.kind=h2
+quarkus.datasource.db-kind=h2
 quarkus.datasource.username=sa
 quarkus.datasource.password=sa
 quarkus.datasource.jdbc.url=jdbc:h2:mem:minimal-config'
