--- a/extensions/smallrye-context-propagation/deployment/src/test/resources/application.properties
+++ b/extensions/smallrye-context-propagation/deployment/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.datasource.kind=h2
+quarkus.datasource.db-kind=h2
 quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:test
 quarkus.datasource.jdbc.max-size=8
 quarkus.datasource.jdbc.min-size=2
