--- a/extensions/smallrye-opentracing/deployment/src/test/resources/application.properties
+++ b/extensions/smallrye-opentracing/deployment/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.datasource.kind=h2
+quarkus.datasource.db-kind=h2
 quarkus.datasource.jdbc.driver=io.opentracing.contrib.jdbc.TracingDriver
 quarkus.datasource.jdbc.url=jdbc:tracing:h2:mem:test
 quarkus.datasource.jdbc.max-size=8
