--- a/integration-tests/flyway/src/main/resources/application.properties
+++ b/integration-tests/flyway/src/main/resources/application.properties
@@ -2,7 +2,7 @@ quarkus.log.console.level=DEBUG
 quarkus.log.category."org.flywaydb.core".level=DEBUG
 quarkus.log.category."io.quarkus.flyway".level=DEBUG
 # Agroal config
-quarkus.datasource.kind=h2
+quarkus.datasource.db-kind=h2
 quarkus.datasource.username=sa
 quarkus.datasource.password=sa
 quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:test_quarkus;DB_CLOSE_DELAY=-1
