--- a/integration-tests/jpa-mysql/src/main/resources/application.properties
+++ b/integration-tests/jpa-mysql/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.datasource.kind=mysql
+quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=hibernate_orm_test
 quarkus.datasource.password=hibernate_orm_test
 quarkus.datasource.jdbc.url=${mysql.url}
