--- a/integration-tests/main/pom.xml
+++ b/integration-tests/main/pom.xml
@@ -15,7 +15,7 @@
     <description>The main integration tests module</description>
 
     <properties>
-        <datasource.kind>h2</datasource.kind>
+        <datasource.db-kind>h2</datasource.db-kind>
         <datasource.url>jdbc:h2:tcp://localhost/mem:test</datasource.url>
         <datasource.username></datasource.username>
         <datasource.password></datasource.password>
@@ -194,7 +194,7 @@
                 </property>
             </activation>
             <properties>
-                <datasource.kind>postgresql</datasource.kind>
+                <datasource.db-kind>postgresql</datasource.db-kind>
                 <datasource.url>${postgres.url}</datasource.url>
                 <datasource.username>hibernate_orm_test</datasource.username>
                 <datasource.password>hibernate_orm_test</datasource.password>
