--- a/integration-tests/reactive-pg-client/src/main/resources/application.properties
+++ b/integration-tests/reactive-pg-client/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.datasource.kind=postgresql
+quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=hibernate_orm_test
 quarkus.datasource.password=hibernate_orm_test
 quarkus.datasource.reactive.url=${reactive-postgres.url}
