--- a/integration-tests/spring-data-jpa/src/it/spring-configuration/src/main/resources/application.properties
+++ b/integration-tests/spring-data-jpa/src/it/spring-configuration/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Configuration file
 # key = value
-quarkus.datasource.kind=h2
+quarkus.datasource.db-kind=h2
 quarkus.datasource.username=username-default
 quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:default
 quarkus.datasource.jdbc.min-size=3
