--- a/integration-tests/vault-app/src/main/resources/application.properties
+++ b/integration-tests/vault-app/src/main/resources/application.properties
@@ -13,6 +13,6 @@ quarkus.vault.secret-config-kv-path=config
 
 quarkus.log.category."io.quarkus.vault".level=DEBUG
 
-quarkus.datasource.kind=postgresql
+quarkus.datasource.db-kind=postgresql
 quarkus.datasource.credentials-provider=mydb
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:6543/mydb
