[fixes #7491] - Resolving enforcement mode from path configuration

--- a/integration-tests/keycloak-authorization/src/main/resources/application.properties
+++ b/integration-tests/keycloak-authorization/src/main/resources/application.properties
@@ -37,3 +37,15 @@ quarkus.keycloak.policy-enforcer.paths.4.enforcement-mode=DISABLED
 quarkus.keycloak.policy-enforcer.paths.5.path=/api/permission/body-claim
 quarkus.keycloak.policy-enforcer.paths.5.claim-information-point.claims.from-body={request.body['/from-body']}
 
+quarkus.keycloak.policy-enforcer.paths.6.name=Root
+quarkus.keycloak.policy-enforcer.paths.6.path=/*
+quarkus.keycloak.policy-enforcer.paths.6.enforcement-mode=DISABLED
+
+quarkus.keycloak.policy-enforcer.paths.7.name=API
+quarkus.keycloak.policy-enforcer.paths.7.path=/api2/*
+quarkus.keycloak.policy-enforcer.paths.7.enforcement-mode=ENFORCING
+
+quarkus.keycloak.policy-enforcer.paths.8.name=Public
+quarkus.keycloak.policy-enforcer.paths.8.path=/hello
+quarkus.keycloak.policy-enforcer.paths.8.enforcement-mode=DISABLED
+
