Rest Client - support injection for providers used in @RegisterProvider
- i.e. for providers not annotated with @Provider
- resolves #7531
- follows up on #5752

--- a/extensions/rest-client/deployment/pom.xml
+++ b/extensions/rest-client/deployment/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>quarkus-smallrye-fault-tolerance-deployment</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-resteasy</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
