Migrate the Liquibase extension to the new datasource config
Also include the jaxb-deployment dependency to rely on this extension to
provide everything related to JAXB/JAXP.

--- a/extensions/liquibase/deployment/src/test/resources/config-for-missing-named-datasource.properties
+++ b/extensions/liquibase/deployment/src/test/resources/config-for-missing-named-datasource.properties
@@ -1,10 +1,10 @@
 # Datasource for "inventory"
-quarkus.datasource.inventory.driver=org.h2.jdbcx.JdbcDataSource
-quarkus.datasource.inventory.url=jdbc:h2:tcp://localhost/mem:inventory
+quarkus.datasource.inventory.db-kind=h2
 quarkus.datasource.inventory.username=username2
-quarkus.datasource.inventory.min-size=2
-quarkus.datasource.inventory.max-size=12
-quarkus.datasource.inventory.xa=true
+quarkus.datasource.inventory.jdbc.url=jdbc:h2:tcp://localhost/mem:inventory
+quarkus.datasource.inventory.jdbc.min-size=2
+quarkus.datasource.inventory.jdbc.max-size=12
+quarkus.datasource.inventory.jdbc.xa=true
 
 # Liquibase configuration for missing "users" datasource
 quarkus.liquibase.users.change-log=db/xml/changeLog.xml
