--- a/extensions/liquibase/deployment/src/test/resources/clean-and-migrate-at-start-config.properties
+++ b/extensions/liquibase/deployment/src/test/resources/clean-and-migrate-at-start-config.properties
@@ -1,7 +1,7 @@
-quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:test-quarkus-clean-at-start;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'src/test/resources/h2-init-data.sql'
-quarkus.datasource.driver=org.h2.Driver
+quarkus.datasource.db-kind=h2
 quarkus.datasource.username=sa
 quarkus.datasource.password=sa
+quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:test-quarkus-clean-at-start;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'src/test/resources/h2-init-data.sql'
 
 # Liquibase config properties
 quarkus.liquibase.clean-at-start=true
