--- a/extensions/liquibase/deployment/src/test/resources/config-for-multiple-datasources.properties
+++ b/extensions/liquibase/deployment/src/test/resources/config-for-multiple-datasources.properties
@@ -1,24 +1,23 @@
 # Datasource default
-quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:test_quarkus;DB_CLOSE_DELAY=-1
-quarkus.datasource.driver=org.h2.Driver
+quarkus.datasource.db-kind=h2
 quarkus.datasource.username=sa
 quarkus.datasource.password=sa
+quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:test_quarkus;DB_CLOSE_DELAY=-1
 
 # Datasource for "users"
-quarkus.datasource.users.driver=org.h2.Driver
-quarkus.datasource.users.url=jdbc:h2:tcp://localhost/mem:users
+quarkus.datasource.users.db-kind=h2
 quarkus.datasource.users.username=username1
-quarkus.datasource.users.min-size=1
-quarkus.datasource.users.max-size=11
-quarkus.datasource.users.xa=false
+quarkus.datasource.users.jdbc.url=jdbc:h2:tcp://localhost/mem:users
+quarkus.datasource.users.jdbc.min-size=1
+quarkus.datasource.users.jdbc.max-size=11
 
 # Datasource for "inventory"
-quarkus.datasource.inventory.driver=org.h2.jdbcx.JdbcDataSource
-quarkus.datasource.inventory.url=jdbc:h2:tcp://localhost/mem:inventory
+quarkus.datasource.inventory.db-kind=h2
 quarkus.datasource.inventory.username=username2
-quarkus.datasource.inventory.min-size=2
-quarkus.datasource.inventory.max-size=12
-quarkus.datasource.inventory.xa=true
+quarkus.datasource.inventory.jdbc.url=jdbc:h2:tcp://localhost/mem:inventory
+quarkus.datasource.inventory.jdbc.min-size=2
+quarkus.datasource.inventory.jdbc.max-size=12
+quarkus.datasource.inventory.jdbc.xa=true
 
 # Liquibase configuration for default datasource
 quarkus.liquibase.change-log=db/xml/changeLog.xml
